--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,20 @@ header{
   height: 100vh;
 }
 
+.overlay {
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.555);
+
+}
+
 #burger {
   color: white;
   font-size: 2.5rem;
 }
+
+#box {
+  background-color: rgb(36, 39, 39);
+  height: 100vh;
+  color: white;
+}
+
